<resources>
    <string name="app_name">The Color</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-1315542540276142/3581295714</string>
    <string name="testad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="intro">Click on the different tile.</string>
    <string name="share_intro">Come on!Open your doge eyes!apk download：</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="scores_0">Scores : 0</string>
    <string name="scores">Scores : %1$d</string>
    <string name="pause">Pausing</string>
    <string name="pauseing">Pausing...</string>
    <string name="goton">Continue</string>
    <string name="share">Share</string>
    <string name="result_scores_0">0 Points</string>
    <string name="result_scores">%1$d Points</string>
    <string name="result_info_0">Your eyesight as a pig!</string>
    <string name="result_info">Your eyesight as a %1$s!</string>
    <string name="result_info_best">Amazing Eyesight!!</string>
    <string name="share_result_info_0">My eyesight as a pig!</string>
    <string name="share_result_info">My eyesight as a %1$s!</string>
    <string name="share_result_info_best">My eyesight is amazing!</string>

</resources>
